[gd_scene load_steps=22 format=2]

[ext_resource path="res://TheCovidWatcher/Assets/mini char/single/mask/people_move_5.tres" type="Texture" id=1]
[ext_resource path="res://TheCovidWatcher/Scripts/People/People.gd" type="Script" id=2]
[ext_resource path="res://TheCovidWatcher/Assets/mini char/single/mask/people_move_0.tres" type="Texture" id=3]
[ext_resource path="res://TheCovidWatcher/Assets/mini char/single/no_mask/people_move_3.tres" type="Texture" id=4]
[ext_resource path="res://TheCovidWatcher/Assets/mini char/single/no_mask/people_move_2.tres" type="Texture" id=5]
[ext_resource path="res://TheCovidWatcher/Assets/mini char/single/no_mask/people_move_4.tres" type="Texture" id=6]
[ext_resource path="res://TheCovidWatcher/Assets/mini char/single/mask/people_move_4.tres" type="Texture" id=7]
[ext_resource path="res://TheCovidWatcher/Assets/mini char/single/no_mask/people_move_0.tres" type="Texture" id=8]
[ext_resource path="res://TheCovidWatcher/Assets/mini char/single/mask/people_move_3.tres" type="Texture" id=9]
[ext_resource path="res://TheCovidWatcher/Assets/mini char/single/mask/people_move_2.tres" type="Texture" id=10]
[ext_resource path="res://TheCovidWatcher/Assets/mini char/single/no_mask/people_idle.tres" type="Texture" id=11]
[ext_resource path="res://TheCovidWatcher/Assets/mini char/single/no_mask/people_move_1.tres" type="Texture" id=12]
[ext_resource path="res://TheCovidWatcher/Assets/mini char/single/no_mask/people_move_5.tres" type="Texture" id=13]
[ext_resource path="res://TheCovidWatcher/Assets/mini char/single/mask/people_idle.tres" type="Texture" id=14]
[ext_resource path="res://TheCovidWatcher/Assets/mini char/single/mask/people_move_1.tres" type="Texture" id=15]
[ext_resource path="res://TheCovidWatcher/Fonts/Pixeboy-z8XGD.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://TheCovidWatcher/Scenes/Sounds/Sounds.tscn" type="PackedScene" id=17]
[ext_resource path="res://TheCovidWatcher/Sounds/Sfx/people_caught.wav" type="AudioStream" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 15 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 1 ) ],
"loop": true,
"name": "move",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "no_mask_idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 12 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 13 ) ],
"loop": true,
"name": "no_mask_move",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.67238, 3.20764 )

[sub_resource type="DynamicFont" id=3]
size = 32
use_mipmaps = true
font_data = ExtResource( 16 )

[node name="People" type="Area2D"]
scale = Vector2( 12, 12 )
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "no_mask_move"
frame = 5
playing = true

[node name="PeopleCollider" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="StateTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Chat" type="Label" parent="."]
visible = false
margin_left = -0.141418
margin_top = -3.588
margin_right = 109.859
margin_bottom = 15.412
rect_scale = Vector2( 0.05, 0.05 )
custom_fonts/font = SubResource( 3 )
text = "Siap Bos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sounds" parent="." instance=ExtResource( 17 )]
sfx = ExtResource( 18 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="area_entered" from="." to="." method="_on_People_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_People_area_exited"]
[connection signal="input_event" from="." to="." method="_on_People_input_event"]
[connection signal="timeout" from="StateTimer" to="." method="_on_StateTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
